Bug fix on category and tag pages not showing menus; service contact links dynamically pass in subject

--- a/wp-content/themes/happyduck/sass/components/_para.scss
+++ b/wp-content/themes/happyduck/sass/components/_para.scss
@@ -24,7 +24,7 @@
 }
 
 .para--lead {
-  @include font-weight('bold');
+  @include font-weight('medium');
   @include media($l-up) {
     @include font-size(18, 30);
   }
