--- a/wp-content/themes/happyduck/sass/layout/_forms.scss
+++ b/wp-content/themes/happyduck/sass/layout/_forms.scss
@@ -83,3 +83,7 @@ body .wpcf7-mail-sent-ok {
   border: 1px solid #dee1e1;
   margin-bottom: 10px;
 }
+
+.wpcf7-text {
+  width:100%;
+}
